# Kimi-K2

./: .env.example  .gitignore  1_informe_KIMI.txt  CLI_README.md  OKIMI_README.md  SETUP_LOCAL.md  intalacion_kimi2.txt  kimi_cli.py  kimi_k2_local_server.py  okimi_cli.py  requirements.txt  test_chutes_Kimi-K2-Thinking.py  test_kimi_funcionamiento.sh
kimi_k2_benchmark/: .coverage  .env.template  BENCHMARK_SUMMARY.md  README.md  pyproject.toml  requirements.txt  run_controlled_benchmark.py  run_mini_benchmark.py  test_kimi_apis.py  test_single_case.py
kimi_k2_benchmark/benchmarks/: mini_benchmark_cases.json
kimi_k2_benchmark/config/: benchmarks.yaml  metrics.yaml  models.yaml
kimi_k2_benchmark/docs/adr/: ADR-001-framework-architecture.md  ADR-002-results-storage.md  ADR-003-execution-schema.md
kimi_k2_benchmark/results/analysis/: controlled_benchmark_metrics.json  deep_analysis.md
kimi_k2_benchmark/results/raw/: 020c918e-79c2-4138-bb74-9fb16bb7df16_2025-11-16T13-44-38-066593.json  13af4664-0922-4635-a91b-f7642b2357fa_2025-11-16T13-41-50-991437.json  224daf8b-617b-477f-84aa-77476f96fa43_2025-11-16T13-45-46-906111.json  23488dd5-dc30-472a-af0d-da18454535fa_2025-11-16T13-45-31-117985.json  32ffffd7-74bf-47d2-b0ee-a23c9604532a_2025-11-16T13-45-15-659401.json  41249ff4-5204-4861-857f-1945ab063b42_2025-11-16T13-42-54-353107.json  (+9 more)
kimi_k2_benchmark/src/: __init__.py  comparator.py  evaluator.py  reporter.py
kimi_k2_benchmark/tests/: __init__.py  test_comparator.py  test_evaluator.py  test_reporter.py
(+1 files in other folders)
